<resources>
    <string name="app_name">Portfolio App</string>
    <string name="my_name">Onuoha Godfirst Chibuzo</string>
    <string name="my_work">Mobile Developer</string>
    <string name="my_interest">I\'m passionate about developing innovative products and I also like music.</string>
    <string name="e_mail">E-mail</string>
    <string name="github">GitHub</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="linkedin">LinkedIn</string>
    <string name="instagram">Instagram</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="android">Android</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="medium">Medium</string>
    <string name="bitbucket">BitBucket</string>
    <string name="stackoverflow">StackOverflow</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone number</string>
</resources>
