<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/app_bg"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            app:cardCornerRadius="100dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/my_image"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:maxWidth="150dp"
                android:contentDescription="@string/app_name" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:text="@string/my_name"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/my_work"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:text="@string/my_interest"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:columnCount="4" >

            <TextView
                android:id="@+id/text_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_columnWeight="1"
                android:text="@string/e_mail"
                android:textAlignment="center"
                android:drawableTop="@drawable/gmail"
                android:drawablePadding="4dp" />

            <TextView
                android:id="@+id/text_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_columnWeight="1"
                android:text="@string/github"
                android:textAlignment="center"
                android:drawableTop="@drawable/github"
                android:drawablePadding="4dp" />

            <TextView
                android:id="@+id/text_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_columnWeight="1"
                android:text="@string/twitter"
                android:textAlignment="center"
                android:drawableTop="@drawable/twitter"
                android:drawablePadding="4dp" />

            <TextView
                android:id="@+id/text_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_columnWeight="1"
                android:text="@string/facebook"
                android:textAlignment="center"
                android:drawableTop="@drawable/facebook"
                android:drawablePadding="4dp" />

            <TextView
                android:id="@+id/text_linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_columnWeight="1"
                android:text="@string/linkedin"
                android:textAlignment="center"
                android:drawableTop="@drawable/linkedin"
                android:drawablePadding="4dp" />

            <TextView
                android:id="@+id/text_instagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_columnWeight="1"
                android:text="@string/instagram"
                android:textAlignment="center"
                android:drawableTop="@drawable/instagram"
                android:drawablePadding="4dp" />

            <TextView
                android:id="@+id/text_whatsapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_columnWeight="1"
                android:text="@string/whatsapp"
                android:textAlignment="center"
                android:drawableTop="@drawable/whatsapp"
                android:drawablePadding="4dp" />

            <TextView
                android:id="@+id/text_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_columnWeight="1"
                android:text="@string/medium"
                android:textAlignment="center"
                android:drawableTop="@drawable/medium"
                android:drawablePadding="4dp" />

            <TextView
                android:id="@+id/text_bitbucket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_columnWeight="1"
                android:text="@string/bitbucket"
                android:textAlignment="center"
                android:drawableTop="@drawable/bitbucket"
                android:drawableTint="@color/colorPrimary"
                android:drawablePadding="4dp" />

            <TextView
                android:id="@+id/text_stackoverflow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_columnWeight="1"
                android:text="@string/stackoverflow"
                android:textAlignment="center"
                android:drawableTop="@drawable/stackoverflow"
                android:drawablePadding="4dp" />

            <TextView
                android:id="@+id/text_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_columnWeight="1"
                android:text="@string/website"
                android:textAlignment="center"
                android:drawableTop="@drawable/ic_website_black_24dp"
                android:drawableTint="@android:color/black"
                android:drawablePadding="4dp" />

            <TextView
                android:id="@+id/text_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_columnWeight="1"
                android:text="@string/contact"
                android:textAlignment="center"
                android:drawableTop="@drawable/ic_call_black_24dp"
                android:drawableTint="@color/colorPrimary"
                android:drawablePadding="4dp" />

        </GridLayout>

    </LinearLayout>

</ScrollView>